[gd_scene load_steps=12 format=3 uid="uid://20rnwfc03mo3"]

[ext_resource type="Script" uid="uid://clptof6ai662l" path="res://_source/jerry.gd" id="1_jaouw"]
[ext_resource type="Script" uid="uid://tlrhb5lm2edb" path="res://_source/weapon_hitbox.gd" id="2_chlgh"]
[ext_resource type="PackedScene" uid="uid://0kja3h7i46s" path="res://_scenes/components/health_bar_display.tscn" id="3_chlgh"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_osdty"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_npxtp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3e37w"]
radius = 0.1
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3ybmm"]
radius = 0.2
height = 1.0

[sub_resource type="Animation" id="Animation_75k05"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon_Mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.85, 0.25, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon_Mesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.7853982)]
}

[sub_resource type="Animation" id="Animation_78x4b"]
resource_name = "attack"
length = 0.17
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon_Mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.85, 0.25, 0.4), Vector3(0.75, 0.25, 0.65), Vector3(0.9, 0.15, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon_Mesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -0.7853982), Vector3(0, -1.0471976, -0.43633232), Vector3(0, 0.6981317, -1.5707964)]
}

[sub_resource type="Animation" id="Animation_2pols"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon_Mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.85, 0.25, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon_Mesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.7853982)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jn4f2"]
_data = {
&"RESET": SubResource("Animation_75k05"),
&"attack": SubResource("Animation_78x4b"),
&"idle": SubResource("Animation_2pols")
}

[node name="Jerry" type="CharacterBody3D"]
script = ExtResource("1_jaouw")

[node name="Body_Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_osdty")
skeleton = NodePath("")

[node name="Body_Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_npxtp")

[node name="Weapon_Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.7071067, 0.7071067, 0, -0.7071067, 0.7071067, 0, 0, 0, 1, 0.85, 0.25, 0.4)
mesh = SubResource("CapsuleMesh_3e37w")
skeleton = NodePath("")

[node name="Weapon_Hitbox" type="Area3D" parent="Weapon_Mesh"]
script = ExtResource("2_chlgh")
metadata/_custom_type_script = "uid://tlrhb5lm2edb"

[node name="Hitbox_Collision" type="CollisionShape3D" parent="Weapon_Mesh/Weapon_Hitbox"]
shape = SubResource("CapsuleShape3D_3ybmm")
debug_color = Color(0.99999994, 0.04050286, 0.022352692, 1)

[node name="HealthBarDisplay" parent="." instance=ExtResource("3_chlgh")]
transform = Transform3D(0.64278764, -0.5416752, -0.5416752, 0, 0.70710677, -0.70710677, 0.76604444, 0.45451948, 0.45451948, 0, 2, 0)

[node name="Isometric_Camera" type="Camera3D" parent="."]
transform = Transform3D(0.7071068, 0.5416752, -0.4545195, 0, 0.64278764, 0.76604444, 0.7071068, -0.5416752, 0.4545195, -3, 7.5, 3)
current = true
fov = 90.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jn4f2")
}

[node name="HitMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.125, 0, 0)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
